# Bus_Booking

./: .gitignore  README.md  main.py  package.json  pyproject.toml  test_chatbot.py  test_date_fix.py  test_results.txt  test_scenarios.py
api/: routes.py  schemas.py
chatbot/: hanlder.py  intents.py  nlu.py  schemas.py  state.py
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  i18n.js  index.css
client/src/config/: env.js
client/src/data/: buses.json  chatResponses.json  cities.json  seats.json
client/src/guards/: RouteGuard.jsx
client/src/hooks/: useBooking.js  useBuses.js  useSearchSync.js  useSeats.js
client/src/locales/: en.json  hi.json  kn.json  ta.json  te.json
client/src/pages/: AboutUs.jsx  BookingConfirmation.jsx  BusListing.jsx  BusPartners.jsx  Cancellation.jsx  CancellationPage.jsx  Careers.jsx  Checkout.jsx  Contact.jsx  CookiePolicy.jsx  FAQ.jsx  HelpCenter.jsx  Home.jsx  Insurance.jsx  Login.jsx  MyBookings.jsx  NotFound.jsx  PrivacyPolicy.jsx  Profile.jsx  SafetyGuide.jsx  SeatSelection.jsx  Signup.jsx  TermsOfUse.jsx
client/src/services/: api.js  bookingService.js  busService.js  chatService.js  locationService.js  (+3 more)
core/: config.py
db/: database.py  master_seed.py  models.py
server/: .env.example  .gitignore  check_settings.py  migrate_bookings.py  migrate_db.py  pyproject.toml  reset_db.py  seed.py  seed_buses.py  seed_routes.py  seed_stops.py  seed_trips.py
server/app/: main.py
services/: auth.py  booking_service.py  bus_service.py  email_service.py  ticket_service.py
(+68 files in other folders)
